day-17/uygulamalar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elma-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elma
  template:
    metadata:
      labels:
        app: elma
    spec:
      containers:
      - name: elma
        image: hashicorp/http-echo
        args: ["-text=Elma sayfasina hosgeldiniz!"]
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: elma-service
spec:
  selector:
    app: elma
  ports:
  - port: 5678
    targetPort: 5678
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: armut-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: armut
  template:
    metadata:
      labels:
        app: armut
    spec:
      containers:
      - name: armut
        image: hashicorp/http-echo
        args: ["-text=Armut sayfasina hosgeldiniz!"]
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: armut-service
spec:
  selector:
    app: armut
  ports:
  - port: 5678
    targetPort: 5678
